fix: Make width on food items 50% on tablets

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body {
         padding-top: 20px;
     }
     .food-item {
-        width: 325px;
+        width: 50%;
     }
 }
 
